# CHIP8-Emulator

./: .gitignore  CMakeLists.txt  Chip8-emulator.c  CmakeLists.txt  README.md  chip8.h  display  display.c  display.h  main.c
src/: Chip8-emulator.c  chip8.h  display.c  display.h  main.c
